app/sample/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: nginx
          port: 80
